syntax="proto3";
package blog;
option go_package = "./proto" ;


service Blog_Service{
    
    rpc CreateBlog(CreateBlogReq) returns (CreateBlogRes) ;
    rpc CreateBlogs(CreateBlogsReq) returns (CreateBlogsRes) ;
    rpc ReadBlog(ReadBlogReq) returns (ReadBlogRes) ;
    rpc UpdateBlog(UpdateBlogReq) returns (UpdateBlogRes) ;
    rpc DeleteBlog(DeleteBlogReq) returns (DeleteBlogRes) ;
    rpc ListBlog(ListBlogReq) returns (stream ListBlogRes) ;
}


message Blog {

    string id = 1 ;
    string author_id = 2 ;
    string title = 3 ;
    string content = 4 ;
}

message CreateBlogsReq{
    repeated Blog blog = 1 ;
}

message CreateBlogsRes{
    repeated Blog blog = 1 ;
}

message CreateBlogReq{

    Blog blog = 1 ;
}


message CreateBlogRes{

    Blog blog = 1 ;
}

message ReadBlogReq{

    string id = 1 ;
}

message ReadBlogRes{

    Blog blog = 1 ;
}

message UpdateBlogRes{

    Blog blog = 1 ;
}

message UpdateBlogReq{

    Blog blog = 1 ;
}


message DeleteBlogReq {

    string id = 1 ;
}

message DeleteBlogRes {

    bool success = 1 ;
}

message ListBlogReq{

}

message ListBlogRes{

    Blog blog = 1 ;
}